--- a/views/admin.html
+++ b/views/admin.html
@@ -18,6 +18,7 @@
         </div>
         <nav class="nav">
           <a href="/access-portal-a94h2f1d" aria-current="page">Admin</a>
+          <a href="/admin-logout" title="Sign out">Sign out</a>
         </nav>
       </div>
     </header>
@@ -69,4 +70,3 @@
     <script src="/js/admin.js"></script>
   </body>
   </html>
-
